--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -28,6 +28,29 @@
             padding: 15px 30px;
             font-size: 27px;
         }
+
+        &-text2{
+            padding: 15px 30px;
+            font-size: 22px;
+        }
+         
+        &-to-dolist{
+            list-style: none;
+        }
+
+        &-to-dos{
+            list-style: none;
+            background-color: white;
+            padding-left: 60px;
+            padding-top: 10px;
+            font-size: 20px;
+            height: 50px;
+            border-radius: 20px;
+            color: black;
+            width: 85%;
+            margin-left: 15px;
+            margin-top: 20px;
+        }
     }
 
     &-box2{
