--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -1,11 +1,52 @@
+@media screen and (max-width: 43.75em){
+    body .main-layout{
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(3,1fr);
+
+        &-box{
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            width: 90%;
+        }
+        
+        &-box1{
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 3;
+            grid-row-end: 4;
+            border-radius: 15px;
+            width: 90%;
+        }
+
+        &-box2{
+          
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 2;
+            grid-row-end: 3;
+            border-radius: 20px;
+            width: 90%;
+        }
+
+    }
+    
+   }
+
 .main-layout{
     display: grid;
+    width: 100%;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,1fr);
     gap: 18px;
     padding: 40px 55px;
-    height: 700px;
+    height: 80%;
     font-family: Arial, Helvetica, sans-serif;
+  
+   
 
     &-box{
         grid-column-start: 1;
@@ -50,6 +91,8 @@
             width: 85%;
             margin-left: 15px;
             margin-top: 20px;
+            min-height: fit-content;
+            min-width: fit-content;
         }
     }
 
@@ -77,7 +120,7 @@
 }
 
 .MuiDateCalendar-root.css-1q04gal-MuiDateCalendar-root{
-    width: 650px;
+    width: 100%;
     background-color: var(--color-light-pink);
     border-radius: 20px;
 }
