updated textarea font size

--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -123,6 +123,7 @@
             border-style: groove;
             border-color: var(--color-dark-grey);
             border-width: 2px;
+            font-size: 1.25rem;
         }
 
         &-submitbutton{
