--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -97,10 +97,16 @@
             padding: 15px 30px;
             font-size: 22px;
         }
+        &-flex{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
          
         &-to-dolist{
             list-style: none;
              width: 80%;
+             
             
              
         }
@@ -110,16 +116,21 @@
             background-color: white;
             padding-left: 60px;
             padding-right: 60px;
-            padding-top: 10px;
             font-size: 20px;
-            height: 50px;
+            height: 3.5rem;
             border-radius: 20px;
             color: black;
             margin-left: 15px;
             margin-top: 20px;
             min-height: fit-content;
             min-width: fit-content;
-            
+            display: grid;
+            grid-template-columns: 0.5fr 2fr 4fr;
+            align-items: center;
+            justify-items: stretch;
+        }
+        &-edit {
+            justify-self: end;  
         }
     }
 
