--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -1,3 +1,8 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Poppins:wght@400;500;600&display=swap');
+
+
+
 @media screen and (max-width: 62.375em){
     body .main-layout{
         display: grid;
@@ -69,7 +74,7 @@
     gap: 18px;
     padding: 40px 55px;
     height: 80%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter',Arial, Helvetica, sans-serif;
   
    
 
@@ -166,11 +171,10 @@
 
         &-inputfield{
             width: 60ch;
-            height: 55%;
+            height: 20%;
             border-style: initial;
             margin-left: 20px;
             padding: 10px;
-            padding-top: 0;
             border-radius: 15px;
             border-style: groove;
             border-color: var(--color-dark-grey);
