--- a/Task_Tracker/src/scss/PriorityLevel.scss
+++ b/Task_Tracker/src/scss/PriorityLevel.scss
@@ -6,5 +6,42 @@
        gap: 1.5rem;
        margin-left: 2rem;
        margin-top: 0.5rem;
+       
+       
     
+}
+
+@media screen and (max-width: 768px) {
+       .container{
+              &-heading {
+                     font-size: 1.2rem;
+              }
+       }
+}
+
+@media screen and (max-width: 425px) {
+       .container {
+             margin-left: 0;
+             padding: 0.5rem;
+              &-form {
+                     gap: 0;
+              }
+       }
+
+}
+
+@media screen and (max-width: 320px) {
+       .container {
+              margin-left: 0;
+              align-items: center;
+              gap: 1rem;
+              justify-content: center;
+              padding: 0.8rem;
+              padding-top: 0;
+              padding-bottom: 0;
+              &-heading {
+                     font-size: 0.8rem;
+              }
+       }
+
 }
