Added scroll feature to scroll through tasks

--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -143,9 +143,25 @@
         &-to-dolist{
             list-style: none;
              width: 95%;
-             max-height: 300px; /* Adjust the max-height as needed */
-             overflow-x: auto;
+             padding-right: 0.3rem;
+             max-height: 600px; /* Adjust the max-height as needed */
+             overflow-x: hidden;
+             overflow-y: scroll;
             }
+            &-to-dolist::-webkit-scrollbar {
+                width: 12px;
+              }
+              
+              &-to-dolist::-webkit-scrollbar-thumb {
+                background-color: #888;
+                border-radius: 10px;
+              }
+              &-to-dolist::-webkit-scrollbar-thumb:hover {
+                background-color: #1E1E1E;
+              }
+              &-to-dolist::-webkit-scrollbar-thumb {
+                transition: background-color 0.3s ease;
+              }
 
         &-to-dos{
            
