--- a/Task_Tracker/src/scss/app.scss
+++ b/Task_Tracker/src/scss/app.scss
@@ -54,10 +54,11 @@
                 padding-bottom: 15px;
                 width: 100%;
                 
+                
 
                 &-todotext{
                     padding: 3%;
-                    width: 70%;
+                    text-overflow:ellipsis;
                 }
             }
          
