--- a/Task_Tracker/src/scss/PriorityLevel.scss
+++ b/Task_Tracker/src/scss/PriorityLevel.scss
@@ -4,7 +4,7 @@
        justify-content: flex-start;
        align-items: center;
        gap: 1.5rem;
-       margin-left: 2rem;
+       margin-left: 12px;
        margin-top: 0.5rem;
        
        
