--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -142,6 +142,8 @@
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
+        background-color: var(--color-light-pink);
+        padding-left: 50px;
     }
 
     &-box1{
@@ -303,7 +305,7 @@
     }
 }
 
-.css-nk89i7-MuiPickersCalendarHeader-root{
+.css-1dozdou{
     background-color: var(--color-dark-grey);
    }
 
@@ -311,7 +313,7 @@
     color: white;
 }
 
-.MuiDateCalendar-root.css-1q04gal-MuiDateCalendar-root{
+.css-1ob76hp{
     width: 100%;
     background-color: var(--color-light-pink);
     border-radius: 20px;
