changed the styling of box 1

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -143,7 +143,8 @@
         grid-row-start: 1;
         grid-row-end: 2;
         background-color: var(--color-light-pink);
-        padding-left: 50px;
+        padding-left: 160px;
+        border-radius: 20px;
     }
 
     &-box1{
@@ -305,7 +306,7 @@
     }
 }
 
-.css-1dozdou{
+/*.css-1dozdou{
     background-color: var(--color-dark-grey);
    }
 
@@ -331,3 +332,4 @@
     color: yellow;
 }
 
+*/
