--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,9 +21,6 @@
             grid-row-end: 2;
             width: 90%;
             max-height: fit-content;
-            background-color: var(--color-light-pink);
-            padding-left: 10%;
-            border-radius: 20px;
         }
         
         &-box1{
@@ -144,9 +141,6 @@
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
-        background-color: var(--color-light-pink);
-        padding-left: 160px;
-        border-radius: 20px;
     }
 
     &-box1{
@@ -308,7 +302,7 @@
     }
 }
 
-/*.css-1dozdou{
+.MuiPickersCalendarHeader-root.css-nk89i7-MuiPickersCalendarHeader-root{
     background-color: var(--color-dark-grey);
    }
 
@@ -316,7 +310,7 @@
     color: white;
 }
 
-.css-1ob76hp{
+.MuiDateCalendar-root.css-1q04gal-MuiDateCalendar-root{
     width: 100%;
     background-color: var(--color-light-pink);
     border-radius: 20px;
@@ -334,4 +328,3 @@
     color: yellow;
 }
 
-*/
