--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,17 @@
             grid-row-end: 2;
             width: 90%;
             max-height: fit-content;
+            padding-left: 10%;
+           
+            @media screen and (min-width: 647px ) and (max-width: 995px){
+                padding-left: 23%;
+            }
+
+            @media screen and (min-width: 100px ) and (max-width: 452px){
+                padding: 0;
+                margin-left: 0;
+            }
+
         }
         
         &-box1{
@@ -142,7 +153,7 @@
         grid-row-start: 1;
         grid-row-end: 2;
         background-color: var(--color-light-pink);
-        padding-left: 160px;
+        padding-left: 140px;
         border-radius: 20px;
     }
 
