--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -239,9 +239,6 @@
             width: max-content;
             margin-top: 0.3rem;
         }
-        &-edit {
-            cursor: pointer;
-        }
          
 
         &-dustbin{
@@ -253,6 +250,14 @@
 
          &-delete{
              cursor: pointer;
+             background: none;
+             border-style: none;
+         }
+
+         .bx.bx-edit{
+            cursor: pointer;
+            background: none;
+            border-style: none;  
          }
     }
 
